media-stack/plex/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
        - name: plex
          image: plexinc/pms-docker:latest
          command: ["/bin/sh", "-c"]
          args:
            - 'export ADVERTISE_IP="http://$NODE_IP:32400/" && echo "Using ADVERTISE_IP=$ADVERTISE_IP" && exec /init'
          ports:
            - containerPort: 32400
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: plex-config-pvc
        - name: downloads
          persistentVolumeClaim:
            claimName: plex-samba-pvc
# kubectl create secret generic plex-claim-secret --from-literal=PLEX_CLAIM=asdsadsadsa -n plex
