media-stack/plex/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-service
  namespace: media-stack
spec:
  selector:
    app: plex
  ports:
    - protocol: TCP
      port: 32400
      targetPort: 32400
  type: ClusterIP
