media-stack/plex/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: media-stack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod # Specify your ClusterIssuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true" # Automatically redirect HTTP to HTTPS
    gethomepage.dev/description: Plex is a media server
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/icon: https://www.plex.tv/wp-content/themes/plex/assets/img/plex-logo.svg
spec:
  rules:
    - host: plex.rke # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex-service
                port:
                  number: 32400
    - host: plex.diggingin.pw # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex-service
                port:
                  number: 32400
  tls:
    - hosts:
        - plex.diggingin.pw # Replace with your domain
        - plex.rke
      secretName: plex-tls # This is the name of the TLS certificate secret
